--- a/.github/workflows/Horusec.yml
+++ b/.github/workflows/Horusec.yml
@@ -11,4 +11,4 @@ jobs:
     - name: Running Horusec Security
       run: |
         curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
-        horusec start -o="json" -O="./output.json" -e="true" --information-severity=true 
+        horusec start  -O="./output.json" -e="true" --information-severity=true 
