--- a/.github/workflows/Horusec.yml
+++ b/.github/workflows/Horusec.yml
@@ -11,4 +11,5 @@ jobs:
     - name: Running Horusec Security
       run: | 
         curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
-        horusec start -p="./" -e="true" -log-level="debug" -O="./output.json"
+        horusec start -p="./" -e="true" -log-level="debug" -O="./output.json" -a="00000000-0000-0000-0000-000000000000"
+        --information-severity=true
